Ecran update  - limitation : infos pas à jour si on revient directement dessus après avoir modifié

--- a/web/index.html
+++ b/web/index.html
@@ -25,6 +25,8 @@
 
   <title>artnext_gr2</title>
   <link rel="manifest" href="manifest.json">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6hX0D_Z1F4sBdFTYOPHdTMvj_Ucp6JDM"></script>
+
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
